RESOLVED FIXED117865
[WK2][EFL]: Invalidate the ProcessLauncher when the process is terminated before it has finished launching
https://bugs.webkit.org/show_bug.cgi?id=117865
Summary [WK2][EFL]: Invalidate the ProcessLauncher when the process is terminated bef...
Sergio Correia (qrwteyrutiyoup)
Reported 2013-06-20 23:41:48 PDT
[WK2][EFL]: Invalidate the ProcessLauncher when the process is terminated before it has finished launching
Attachments
Patch (1.73 KB, patch)
2013-06-20 23:44 PDT, Sergio Correia (qrwteyrutiyoup)
no flags
Sergio Correia (qrwteyrutiyoup)
Comment 1 2013-06-20 23:44:08 PDT
Chris Dumez
Comment 2 2013-06-21 01:30:36 PDT
Comment on attachment 205151 [details] Patch Consistent with other ports. r=me.
WebKit Commit Bot
Comment 3 2013-06-21 01:52:50 PDT
Comment on attachment 205151 [details] Patch Clearing flags on attachment: 205151 Committed r151828: <http://trac.webkit.org/changeset/151828>
WebKit Commit Bot
Comment 4 2013-06-21 01:52:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.